translate Items category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -45,10 +45,10 @@
   <CATEGORY Name="Items">
     <Entry Name="Battery">Батарэйкі</Entry>
     <Entry Name="BatteryDesc">Батарэйкі з поўным зарадам.</Entry>
-    <Entry Name="Dynamite">Dynamite</Entry>
-    <Entry Name="DynamiteDesc">I try not to be in the habit of handling old explosives, but I guess needs must.</Entry>
-    <Entry Name="Flare">Flare</Entry>
-    <Entry Name="FlareDesc">It's a flare. Could be a handy light source.</Entry>
+    <Entry Name="Dynamite">Дынаміт</Entry>
+    <Entry Name="DynamiteDesc">Я стараюся не выпрацоўваць звычкі працаваць са старымі выбуховымі рэчывамі, але часам прыходзіцца, мяркую.</Entry>
+    <Entry Name="Flare">Фальшфэер</Entry>
+    <Entry Name="FlareDesc">Гэта фальшфеер. Можа быць зручнай крыніцай святла.</Entry>
     <Entry Name="Flashlight">Ліхтарык</Entry>
     <Entry Name="FlashlightDesc">Добра, што я дадумаўся ўзяць ліхтарык. На жаль ён такі стары, што расходуе некалькі батарэек за гадзіну.</Entry>
     <Entry Name="Glowstick">Хімічная Крыніца Святла</Entry>
@@ -57,129 +57,129 @@
     <Entry Name="Key01Desc">Ключ ад майго старога замка.</Entry>
     <Entry Name="Notebook">Нататнік</Entry>
     <Entry Name="NotebookDesc">Добры навуковец заўсёды трымае ручку і паперу пад рукою, так, на ўсякі выпадак.</Entry>
-    <Entry Name="Painkillers">Painkillers</Entry>
-    <Entry Name="PainkillersDesc">Well I'd prefer a first aid kit, but at least if I'm injured I can grin and bear it.</Entry>
+    <Entry Name="Painkillers">Анальгетыкі</Entry>
+    <Entry Name="PainkillersDesc">Ну, я б аддаў перавагу аптэчцы, але, па меншай меры, калі буду паранены, то змагу ўсміхнуцца і вытрымаць.</Entry>
     <Entry Name="BoatLock">Замок</Entry>
     <Entry Name="BoatLockDesc">Гэта стары замок, пэўна, але ўсё яшчэ працуе.</Entry>
-    <Entry Name="MapFolderDesc">A plastic folder for storing maps.</Entry>
-    <Entry Name="MapFolder">Map folder</Entry>
-    <Entry Name="StrangeArticle">Copenhagen Post Article</Entry>
-    <Entry Name="StrangeArticleDesc">An article from a very old copy of the Copenhagen Post.</Entry>
-    <Entry Name="BookExplosives">Explosives book</Entry>
-    <Entry Name="BookExplosivesDesc">It's some kind of chemist's tome, full of explosives recipes.</Entry>
-    <Entry Name="DextrinDesc">A bottle of Baxtrin, might come in handy.</Entry>
-    <Entry Name="Dextrin">Baxtrin</Entry>
-    <Entry Name="ArtefactDesc">I don't tend to rely on instincts, but if I did, I'd stay the hell away from whatever this thing is.</Entry>
-    <Entry Name="CottonString">Cotton string</Entry>
-    <Entry Name="CottonStringDesc">It's a piece of string, just about long enough to make a fuse out of.</Entry>
-    <Entry Name="CottonStringSoakedDesc">The string's soaked in Baxtrin, now it just needs some gun powder.</Entry>
-    <Entry Name="CottonStringSoaked">Soaked cotton string</Entry>
-    <Entry Name="Fuse">Fuse</Entry>
-    <Entry Name="FuseDesc">Unbelievably, this is the first fuse I've ever made.</Entry>
+    <Entry Name="MapFolderDesc">Пластыкавая папка для захоўвання карт.</Entry>
+    <Entry Name="MapFolder">Папка з картамі</Entry>
+    <Entry Name="StrangeArticle">Артыкул з "Капенгаген Пост"</Entry>
+    <Entry Name="StrangeArticleDesc">Артыкул з вельмі старой копіі "Капенгаген Пост".</Entry>
+    <Entry Name="BookExplosives">Кніга выбуховых рэчываў</Entry>
+    <Entry Name="BookExplosivesDesc">Гэта нейкі хімічны фаліянт, поўны рэцэптаў выбуховых рэчываў.</Entry>
+    <Entry Name="DextrinDesc">Бутэлька Бакстрына, можа спатрэбіцца.</Entry>
+    <Entry Name="Dextrin">Бакстрын</Entry>
+    <Entry Name="ArtefactDesc">Я не схільны спадзявацца на інстынкты, але калі б спадзяваўся, то трымаўся б далей ад гэтай штукі, чым бы яна не была.</Entry>
+    <Entry Name="CottonString">Баваўняная нітка</Entry>
+    <Entry Name="CottonStringDesc">Гэта кавалак ніткі, дастаткова доўгі, каб зрабіць запал.</Entry>
+    <Entry Name="CottonStringSoakedDesc">Нітка, прасякнутая ў Бакстрыне, цяпер проста патрэбны порах.</Entry>
+    <Entry Name="CottonStringSoaked">Змочаная баваўняная нітка</Entry>
+    <Entry Name="Fuse">Запал</Entry>
+    <Entry Name="FuseDesc">Неверагодна, гэта першы запал, які я калі-небудзь зрабіў.</Entry>
     <Entry Name="Hammer">Малаток</Entry>
     <Entry Name="HammerDesc">Гэты малаток крыху пабачыў жыццё ў свой час.</Entry>
     <Entry Name="SteelRod">Металічны стрыжань</Entry>
     <Entry Name="SteelRodDesc">Металічны стрыжань.</Entry>
-    <Entry Name="Lighter">Empty lighter</Entry>
-    <Entry Name="LighterDesc">It's a zippo lighter, but it's empty.</Entry>
-    <Entry Name="LighterGasDesc">A lighter refill canister.</Entry>
-    <Entry Name="LighterGas">Fluid lighter gas</Entry>
-    <Entry Name="SpiderNoteDesc">The last thing written by a mad man.</Entry>
-    <Entry Name="SpiderNote">Spider Hater's Note</Entry>
-    <Entry Name="LighterWorking">Zippo lighter</Entry>
-    <Entry Name="LighterWorkingDesc">It's filled up and ready to burn.</Entry>
-    <Entry Name="OldMineKey">Old Key</Entry>
-    <Entry Name="OldMineKeyDesc">This key's old and scratched, but looks to be in one piece.</Entry>
-    <Entry Name="Meat">Beef Jerky</Entry>
-    <Entry Name="MeatDesc">Beef jerky. Not without aroma.</Entry>
-    <Entry Name="BroomDesc">Looking around, I'm not sure this broom saw much active duty.</Entry>
-    <Entry Name="Broom">Broom</Entry>
-    <Entry Name="SawDesc">A saw. Rusty enough that I wish I'd had that tetanus shot, but still sharp enough to saw through wood.</Entry>
-    <Entry Name="Saw">Saw</Entry>
-    <Entry Name="BookCodeDesc">It's some kind of emergency procedures leaflet. What sort of emergencies were they expecting?</Entry>
-    <Entry Name="BookCode">Emergency Procedures Pamphlet</Entry>
-    <Entry Name="ComRadioDesc">It's a narrow band communications radio. Huh, I remember building one of these in my first electronics class. I probably did a better job of it as well.</Entry>
+    <Entry Name="Lighter">Пустая запальнічка</Entry>
+    <Entry Name="LighterDesc">Гэта запальнічка Zippo, але пустая.</Entry>
+    <Entry Name="LighterGasDesc">Балончык для папаўнення запальніцы.</Entry>
+    <Entry Name="LighterGas">Вадкі газ для запальніцы</Entry>
+    <Entry Name="SpiderNoteDesc">Апошняе, што напісаў вар'ят.</Entry>
+    <Entry Name="SpiderNote">Запіска Ненавісніка Павукоў</Entry>
+    <Entry Name="LighterWorking">Запальніца Zippo</Entry>
+    <Entry Name="LighterWorkingDesc">Запраўленая і гатовая да гарэння.</Entry>
+    <Entry Name="OldMineKey">Стары ключ</Entry>
+    <Entry Name="OldMineKeyDesc">Гэты ключ стары і падрапаны, але, здаецца, цэлы.</Entry>
+    <Entry Name="Meat">Вяленая ялавічына</Entry>
+    <Entry Name="MeatDesc">Вяленая ялавічына. З душком.</Entry>
+    <Entry Name="BroomDesc">Аглядаючыся, я не ўпэўнены, што гэта мятла актыўна выкарыстоўвалася.</Entry>
+    <Entry Name="Broom">Мятла</Entry>
+    <Entry Name="SawDesc">Піла. Настолькі іржавая, што я шкадую, што не зрабіў тую прышчэпку ад слупняку, але ўсё яшчэ дастаткова вострая, каб распіць дрэва.</Entry>
+    <Entry Name="Saw">Піла</Entry>
+    <Entry Name="BookCodeDesc">Гэта нейкая лістоўка на выпадак надзвычайных сітуацый. Якіх надзвычайных сітуацый яны чакалі?</Entry>
+    <Entry Name="BookCode">Брашура на выпадак надзвычайных сітуацый</Entry>
+    <Entry Name="ComRadioDesc">Вузкачастотная радыёстанцыя. Хах, памятаю, як пабудаваў адну на сваіх першых занятках па электроніцы. Верагодна, у мяне нават атрымалася лепей.</Entry>
     <Entry Name="ComRadio">Com radio</Entry>
-    <Entry Name="PickAxeDesc">An old miner's pick axe.</Entry>
-    <Entry Name="PickAxe">Pick axe</Entry>
-    <Entry Name="GeneratorBattery">Battery</Entry>
-    <Entry Name="GeneratorBatteryDesc">A spare battery.</Entry>
-    <Entry Name="ReplacementFuseDesc">A standard 5.5v fuse.</Entry>
-    <Entry Name="ReplacementFuse">Fuse</Entry>
-    <Entry Name="MachineKeyDesc">It's a vehicle key.</Entry>
-    <Entry Name="MachineKey">Large key</Entry>
-    <Entry Name="Gasoline">Gasoline</Entry>
-    <Entry Name="GasolineDesc">A can of gasoline.</Entry>
-    <Entry Name="BookGreenlandDesc">Someone's been reading up on Inuit religion.</Entry>
-    <Entry Name="BookGreenland">Greenland myths</Entry>
-    <Entry Name="BookGeneratorManualDesc">Thanks God, it's the generator manual.</Entry>
-    <Entry Name="BookGeneratorManual">Generator Manual</Entry>
-    <Entry Name="NoteFormanDesc">A note left behind for someone...</Entry>
-    <Entry Name="NoteForman">Foreman's Warning</Entry>
-    <Entry Name="NoteWaterFindingsDesc">Ah, this might shed some light on what's been going on down here.</Entry>
-    <Entry Name="NoteWaterFindings">Excavation Findings</Entry>
-    <Entry Name="NoteXenoDesc">I wonder whether whoever wrote this had any better idea about this place than I do.</Entry>
-    <Entry Name="NoteXeno">Xeno Report</Entry>
-    <Entry Name="NoteWaterNoteDesc">I didn't realise work logs were standard practice in mines.</Entry>
-    <Entry Name="NoteWaterNote">Excavation Log</Entry>
-    <Entry Name="BlankNote">Blank note</Entry>
-    <Entry Name="BlankNoteDesc">It's a piece of paper, blank, save for the smears of dirt.</Entry>
-    <Entry Name="Boltcutter">Boltcutter</Entry>
-    <Entry Name="BoltcutterDesc">Industrial bolt cutters. There's not much I wouldn't be able to get through with these.</Entry>
-    <Entry Name="Screwdriver">Screwdriver</Entry>
-    <Entry Name="ScrewdriverDesc">Looks as if it's been used for almost everything, save for what it's meant for. I'm sure I'll find something down here to screw.</Entry>
-    <Entry Name="OldNewspaper">Old newspaper</Entry>
-    <Entry Name="OldNewspaperDesc">Pretty well battered, very little is still readable.</Entry>
-    <Entry Name="SecretMineKey">Metal key</Entry>
-    <Entry Name="SecretMineKeyDesc">Another key, this one is actually in half decent shape. Wow.</Entry>
-    <Entry Name="ChemicalA">Chemical</Entry>
-    <Entry Name="ChemicalB">Chemical</Entry>
-    <Entry Name="ChemicalC">Chemical</Entry>
-    <Entry Name="ChemicalD">Chemical</Entry>
-    <Entry Name="ChemicalE">Chemical</Entry>
-    <Entry Name="ChemicalADesc">Chemical labelled with an "A".</Entry>
-    <Entry Name="ChemicalBDesc">Chemical labelled with a "B".</Entry>
-    <Entry Name="ChemicalCDesc">Chemical labelled with a "C".</Entry>
-    <Entry Name="ChemicalDDesc">Chemical labelled with a "D".</Entry>
-    <Entry Name="ChemicalEDesc">Chemical labelled with an "E".</Entry>
-    <Entry Name="CrowbarDesc">Probably handy if you're trekking through the tundra. There's a name scratched into the metal: 'Freeman'.</Entry>
-    <Entry Name="Crowbar">Crowbar</Entry>
-    <Entry Name="NoteExplorer">Explorer's Last Will &amp; Testament</Entry>
-    <Entry Name="NoteExplorerDesc">Who left that backpack, and these pages down here?</Entry>
-    <Entry Name="GlassContainerDesc">A container for mixing chemicals.</Entry>
-    <Entry Name="GlassContainer">Glass container</Entry>
-    <Entry Name="ChemicalFDesc">Chemical labelled with an "F".</Entry>
-    <Entry Name="ChemicalF">Chemical</Entry>
-    <Entry Name="ShaftFuseDesc">A nice, dry fuse.</Entry>
-    <Entry Name="ShaftFuse">Fuse</Entry>
-    <Entry Name="RedsKeyDesc">The key Red was guarding from me. Was he trying to keep something hidden? Or was he really trying to protect me?</Entry>
-    <Entry Name="RedsKey">Red's key</Entry>
+    <Entry Name="PickAxeDesc">Старая шахцёрская кірка.</Entry>
+    <Entry Name="PickAxe">Кірка</Entry>
+    <Entry Name="GeneratorBattery">Акумулятар</Entry>
+    <Entry Name="GeneratorBatteryDesc">Запасны акумулятар.</Entry>
+    <Entry Name="ReplacementFuseDesc">Стандартны засцерагальнік на 5.5 В.</Entry>
+    <Entry Name="ReplacementFuse">Засцерагальнік</Entry>
+    <Entry Name="MachineKeyDesc">Ключ ад машыны.</Entry>
+    <Entry Name="MachineKey">Вялікі ключ</Entry>
+    <Entry Name="Gasoline">Бензін</Entry>
+    <Entry Name="GasolineDesc">Каністра бензіну.</Entry>
+    <Entry Name="BookGreenlandDesc">Хтосьці чытаў пра рэлігію інуітаў.</Entry>
+    <Entry Name="BookGreenland">Міфы Грэнландыі</Entry>
+    <Entry Name="BookGeneratorManualDesc">Дзякуй богу, гэта інструкцыя для генератара.</Entry>
+    <Entry Name="BookGeneratorManual">Інструкцыя для генератара</Entry>
+    <Entry Name="NoteFormanDesc">Запіска, пакінутая камусьці...</Entry>
+    <Entry Name="NoteForman">Папярэджанне брыгадзіра</Entry>
+    <Entry Name="NoteWaterFindingsDesc">Ах, гэта можа праліць святло на тое, што тут адбываецца.</Entry>
+    <Entry Name="NoteWaterFindings">Знаходкі раскопак</Entry>
+    <Entry Name="NoteXenoDesc">Цікава, ці ведаў той, хто напісаў гэта, хоць крыху больш пра гэтае месца, чым я.</Entry>
+    <Entry Name="NoteXeno">Справаздача Xeno</Entry>
+    <Entry Name="NoteWaterNoteDesc">Я не думаў, што працоўныя журналы з'яўляюцца стандартнай практыкай у шахтах.</Entry>
+    <Entry Name="NoteWaterNote">Журнал раскопак</Entry>
+    <Entry Name="BlankNote">Пустая папера</Entry>
+    <Entry Name="BlankNoteDesc">Гэта кавалак паперы, пусты, за выключэннем мазкоў бруду. </Entry>
+    <Entry Name="Boltcutter">Балтарэз</Entry>
+    <Entry Name="BoltcutterDesc">Прамысловыя балтарэзы. Існуе няшмат чаго, з чым бы яны не справіліся.</Entry>
+    <Entry Name="Screwdriver">Адвёртка</Entry>
+    <Entry Name="ScrewdriverDesc">Здаецца, яе выкарыстоўвалі практычна для ўсяго, за выключэннем прамога назначэння. Я ўпэўнены, што тут знойдзецца што адкруціць.</Entry>
+    <Entry Name="OldNewspaper">Старая газета</Entry>
+    <Entry Name="OldNewspaperDesc">Даволі старая, няшмат чаго можна прачытаць.</Entry>
+    <Entry Name="SecretMineKey">Металічны ключ</Entry>
+    <Entry Name="SecretMineKeyDesc">Іншы ключ, гэты насамрэч у амаль прыстойнай форме. Нічога сабе.</Entry>
+    <Entry Name="ChemicalA">Хімікат</Entry>
+    <Entry Name="ChemicalB">Хімікат</Entry>
+    <Entry Name="ChemicalC">Хімікат</Entry>
+    <Entry Name="ChemicalD">Хімікат</Entry>
+    <Entry Name="ChemicalE">Хімікат</Entry>
+    <Entry Name="ChemicalADesc">Хімікат з біркай "A".</Entry>
+    <Entry Name="ChemicalBDesc">Хімікат з біркай "B".</Entry>
+    <Entry Name="ChemicalCDesc">Хімікат з біркай "C".</Entry>
+    <Entry Name="ChemicalDDesc">Хімікат з біркай "D".</Entry>
+    <Entry Name="ChemicalEDesc">Хімікат з біркай "E".</Entry>
+    <Entry Name="CrowbarDesc">Напэўна, спатрэбіцца, калі вы падарожнічаеце па тундры. На метале надрапана імя: "Фрыман".</Entry>
+    <Entry Name="Crowbar">Лом</Entry>
+    <Entry Name="NoteExplorer">Апошняя воля даследчыка &amp; Завяшчанне</Entry>
+    <Entry Name="NoteExplorerDesc">Хто пакінуў гэты заплечнік, і гэтыя старонкі тут? </Entry>
+    <Entry Name="GlassContainerDesc">Кантэйнер для змешвання хімічных рэчываў.</Entry>
+    <Entry Name="GlassContainer">Шкляны кантэйнер</Entry>
+    <Entry Name="ChemicalFDesc">Хімікат з біркай "F".</Entry>
+    <Entry Name="ChemicalF">Хімікат</Entry>
+    <Entry Name="ShaftFuseDesc">Прыгожы, сухі запал</Entry>
+    <Entry Name="ShaftFuse">Запал</Entry>
+    <Entry Name="RedsKeyDesc">Ключ, які Рэд хаваў ад мяне. Ці спрабаваў ён нешта ўтаіць? Або сапраўды спрабаваў абараніць мяне?</Entry>
+    <Entry Name="RedsKey">Ключ Рэда</Entry>
     <Entry Name="NoteFishermanDesc">Мабыць мне след пакінуць рыбаку крыху прыватнасці...?</Entry>
     <Entry Name="NoteFisherman">Любоўная запіска Жонкі рыбака</Entry>
-    <Entry Name="NoteUVDesc">It doesn't look like there's any writing on here at all.</Entry>
-    <Entry Name="NoteUV">Updated Safety Precautions</Entry>
-    <Entry Name="NoteRockWormDesc">It's a collection of research on a species of worm, with some scrawled notes in the margins.</Entry>
-    <Entry Name="NoteRockWorm">Rock Worm Study</Entry>
-    <Entry Name="NoteRedDesc">This is the only piece of legible writing I can find in this room. Are these Red's final words?</Entry>
-    <Entry Name="NoteRed">Young Red's Predicament</Entry>
-    <Entry Name="NoteNewsClip3Desc">It's an extract from a newspaper.</Entry>
-    <Entry Name="NoteNewsClip2Desc">It's an extract from a newspaper.</Entry>
-    <Entry Name="NoteNewsClip1Desc">It's an extract from a newspaper.</Entry>
-    <Entry Name="NoteNewsClip1">News Clipping: Copenhagen Post</Entry>
-    <Entry Name="NoteNewsClip2">News Clipping: KNR, Thursday 1st</Entry>
-    <Entry Name="NoteNewsClip3">News Clipping: KNR, Monday 7th</Entry>
-    <Entry Name="NoteMinerDesc">The words on this page are so scribbled that they're hard to make out.</Entry>
-    <Entry Name="NoteMiner">Trapped Miner's Final Words</Entry>
-    <Entry Name="NoteOfficersLogDesc">It's a military report, dated 1945.</Entry>
-    <Entry Name="NoteOfficersLog">Officer's Log</Entry>
-    <Entry Name="NoteWorkshopCodeDesc">An old piece of paper, with a few words on it.</Entry>
-    <Entry Name="NoteWorkshopCode">My Favourite Workshop</Entry>
-    <Entry Name="NoteChemists">Chemist's Notes</Entry>
-    <Entry Name="NoteChemistsDesc">Some hasty notes about a set of chemicals.</Entry>
-    <Entry Name="CoffinKeyDesc">A smaller key for a locker or container.</Entry>
-    <Entry Name="CoffinKey">Small key</Entry>
-    <Entry Name="NoteBaseEntry">Welcome to the Shelter</Entry>
-    <Entry Name="NoteBaseEntryDesc">Seems like a list of staff.</Entry>
+    <Entry Name="NoteUVDesc">Падобна на тое, што тут наогул няма надпісаў.</Entry>
+    <Entry Name="NoteUV">Абноўленыя меры бяспекі</Entry>
+    <Entry Name="NoteRockWormDesc">Гэта калекцыя даследаванняў віду чарвякоў з нейкімі надрапанымі заўвагамі па краях.</Entry>
+    <Entry Name="NoteRockWorm">Даследаванне Каменнага Чарвяка</Entry>
+    <Entry Name="NoteRedDesc">Гэта адзіныя разборлівыя надпісы, якія я магу знайсці ў гэтым пакоі. Гэта апошнія словы Рэда?</Entry>
+    <Entry Name="NoteRed">Cтановішча маладога Рэда</Entry>
+    <Entry Name="NoteNewsClip3Desc">Вытрымка з газеты.</Entry>
+    <Entry Name="NoteNewsClip2Desc">Вытрымка з газеты.</Entry>
+    <Entry Name="NoteNewsClip1Desc">Вытрымка з газеты.</Entry>
+    <Entry Name="NoteNewsClip1">Вытрымка з навін: Капенгаген Пост</Entry>
+    <Entry Name="NoteNewsClip2">Вытрымка з навін: KNR, чацвер 1-га</Entry>
+    <Entry Name="NoteNewsClip3">Вытрымка з навін: KNR, пагядзелак 7-га</Entry>
+    <Entry Name="NoteMinerDesc">Словы на гэтай старонцы настолькі размазаныя, што іх цяжка разабраць.</Entry>
+    <Entry Name="NoteMiner">Апошнія словы шахцёра</Entry>
+    <Entry Name="NoteOfficersLogDesc">Ваенны даклад датаваны 1945-ым годам.</Entry>
+    <Entry Name="NoteOfficersLog">Афіцэрскі журнал </Entry>
+    <Entry Name="NoteWorkshopCodeDesc">Стары лісток паперы з некалькімі словамі на ім.</Entry>
+    <Entry Name="NoteWorkshopCode">Мая любімая майстэрня</Entry>
+    <Entry Name="NoteChemists">Нататкі хіміка</Entry>
+    <Entry Name="NoteChemistsDesc">Нейкія паспешныя нататкі пра набор хімічных рэчываў.</Entry>
+    <Entry Name="CoffinKeyDesc">Меншы ключ для шафкі або кантэйнера.</Entry>
+    <Entry Name="CoffinKey">Маленькі ключ</Entry>
+    <Entry Name="NoteBaseEntry">Вітаем у Сховішчы</Entry>
+    <Entry Name="NoteBaseEntryDesc">Падобна на спіс супрацоўнікаў.</Entry>
     <Entry Name="NoteSpiderHater2">Навуковыя знаходкі 1</Entry>
     <Entry Name="NoteSpiderHater2Desc">Нейкія штодзённыя запісы.</Entry>
     <Entry Name="NoteSpiderHater3Desc">Нейкі журнал.</Entry>
