translate Inventory category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -186,33 +186,33 @@
     <Entry Name="NoteSpiderHater3">Навуковыя знаходкі 2</Entry>
   </CATEGORY>
   <CATEGORY Name="Inventory">
-    <Entry Name="Use">Use</Entry>
-    <Entry Name="Drop">Drop</Entry>
-    <Entry Name="Combine">Combine</Entry>
-    <Entry Name="with">with</Entry>
-    <Entry Name="CannotUseItem1">How's that going to work?</Entry>
-    <Entry Name="CannotUseItem2">Christ, what am I thinking?</Entry>
-    <Entry Name="CannotUseItem3">Nope.</Entry>
-    <Entry Name="CannotUseItem4">No, not quite right.</Entry>
-    <Entry Name="CannotUseItem5">I need to start thinking straight.</Entry>
-    <Entry Name="CannotCombineItems1">Hmm... what made me think they go together?</Entry>
-    <Entry Name="CannotCombineItems2">Huh, yeah, maybe I could just manufacture a way out of here. Or not.</Entry>
-    <Entry Name="CannotCombineItems3">Nope.</Entry>
-    <Entry Name="CannotCombineItems4">No, not quite right.</Entry>
-    <Entry Name="CannotCombineItems5">I need to start thinking straight.</Entry>
-    <Entry Name="EqupSlot">Equip</Entry>
-    <Entry Name="Read">Read</Entry>
+    <Entry Name="Use">Выкарыстаць</Entry>
+    <Entry Name="Drop">Выкінуць</Entry>
+    <Entry Name="Combine">Злучыць</Entry>
+    <Entry Name="with">і</Entry>
+    <Entry Name="CannotUseItem1">І як гэта павінна працаваць?</Entry>
+    <Entry Name="CannotUseItem2">Божухна, чым я толькі думаю?</Entry>
+    <Entry Name="CannotUseItem3">Неа.</Entry>
+    <Entry Name="CannotUseItem4">Не, і блізка не так.</Entry>
+    <Entry Name="CannotUseItem5">Мне трэба пачынаць думаць ясна.</Entry>
+    <Entry Name="CannotCombineItems1">Хм... Чаму я думаў, што гэта можна злучыць?</Entry>
+    <Entry Name="CannotCombineItems2">Ах, так, магчыма, я мог бы проста вырабіць выхад адсюль. Ці не.</Entry>
+    <Entry Name="CannotCombineItems3">Неа.</Entry>
+    <Entry Name="CannotCombineItems4">Не, і блізка не так.</Entry>
+    <Entry Name="CannotCombineItems5">Мне трэба пачынаць думаць ясна.</Entry>
+    <Entry Name="EqupSlot">Узяць</Entry>
+    <Entry Name="Read">Чытаць</Entry>
     <Entry Name="Power">Power</Entry>
-    <Entry Name="Turn onoff">Turn on/off</Entry>
-    <Entry Name="Throw">Throw</Entry>
-    <Entry Name="Equip">Equip</Entry>
-    <Entry Name="Eat">Eat</Entry>
-    <Entry Name="YouPickedUp">I've found</Entry>
-    <Entry Name="On">On</Entry>
-    <Entry Name="Off">Off</Entry>
+    <Entry Name="Turn onoff">Уключыць/выключыць</Entry>
+    <Entry Name="Throw">Кінуць</Entry>
+    <Entry Name="Equip">Узяць</Entry>
+    <Entry Name="Eat">З'есці</Entry>
+    <Entry Name="YouPickedUp">Я знайшоў</Entry>
+    <Entry Name="On">Укл.</Entry>
+    <Entry Name="Off">Выкл.</Entry>
     <Entry Name="HealthFine">Я настолькі здаровы, наколькі гэта магчыма.</Entry>
-    <Entry Name="HealthCaution">I'm losing blood, but I should be OK.</Entry>
-    <Entry Name="HealthDanger">I can't feel my arms and legs anymore. I'm in trouble.</Entry>
+    <Entry Name="HealthCaution">Я губляю кроў, але павінны быць у парадку.</Entry>
+    <Entry Name="HealthDanger">Я больш не адчуваю рук і ног. У мяне праблемы.</Entry>
     <Entry Name="BatteryLevel">Батарэйкі</Entry>
     <Entry Name="BatteryLevelDesc1">Засталося</Entry>
     <Entry Name="BatteryLevelDesc2">зараду батарэек.</Entry>
