translate 01_06_workshop category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -319,33 +319,33 @@
     <Entry Name="spiderhater3">Дзень семдзесят першы[br][br]    Мае ранейшыя здагадкі аб дабраякаснай прыродзе маіх сужыцеляў, магчыма, былі зроблены памылкова.  Пасля ўважлівага ўскрыцця я занепакоены тым, што ў іх страўніку можа захоўвацца невялікі аб'ём натуральных хімічных рэчываў, якія пры рэгулярным прыёме ўнутр на працягу пэўнага перыяду часу могуць быць псіхатропнымі, ці нават смяротнымі.  Мой адзіны рэальны шанс - вырвацца адсюль і здзейсніць набег на любыя запасы, якія я змагу знайсці.  Аднак факты супраць такога кроку непераадольныя: [br][br]1. У мяне няма крыніцы святла[br]2. Я пакляўся сабе, што не выйду, пакуль не пачую чалавечыя галасы звонку [br]3. Павукі такія смачныя [br] [new_page][br]Дзень соты[br][br] Судзячы па знаках, якія я рабіў на сценах, і запісах у дзённіку, якія ў цемры выглядаюць як нечытальныя каракулі, сёння соты дзень майго новага жыцця. [br][br] За апошні месяц мае ядомыя сябры сталі ўсё больш і больш агрэсіўнымі, і павялічыліся ў колькасці і памеры. Я не ўпэўнены, ці з'яўляецца гэта вынікам майго рабавання іх экасістэмы, аднак, пры такіх тэмпах росту яны хутка стануць занадта вялікімі, каб прапаўзаць праз шчыліны ў сценах.  Хто ведае, можа я бачу толькі вяршыню айсберга. [br][br]    Калі нічога не атрымаецца, і мяне ніколі не выратуюць, спадзяваюся, прынамсі, што маё даследаванне, і сапраўдны ўдзел у жыцці гэтых захапляльных істот аднойчы будуць разглядацца як важны момант у прыродазнаўстве.  Найвялікшыя імёны ў сучаснай навуцы патрапілі туды больш дзякуючы выпадку, чым таленту, і здаецца, што гэтае правіла распаўсюдзілася і на маё адкрыццё гэтага смачнага новага віду.  [br][br]Я малюся толькі каб другое правіла абышло мяне бокам: усе вялікія адкрыцці, як правіла, спажываюць свайго вынаходніка.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_06_workshop">
-    <Entry Name="EventNoticeAxe">It could just be a piece of ice reflecting the light, or more likely, my imagination, but something's definitely catching my eye under those rocks...</Entry>
-    <Entry Name="DescShovels01">These look like they've seen some use in their time. Can't have been much fun working down here. In fact, it must have been pretty God awful.</Entry>
-    <Entry Name="DescShovels02">These won't do any better job of knocking down that door. They're more likely to disintegrate on contact.</Entry>
-    <Entry Name="DescExplDoor01">Locked. Damnit! How am I going to get in there now?! The door does look very weak and old.</Entry>
-    <Entry Name="DescCottonstrings01">A box full of odd bits of string.</Entry>
-    <Entry Name="DescCottonstrings02">Hey, maybe I could use some of this string to make a fuse! It looks in decent enough condition...</Entry>
-    <Entry Name="EventPickString">Brilliant, one step closer to setting off those explosives without losing any vital body parts.</Entry>
-    <Entry Name="DescExplDoorFirst">'Explosives'. Ah, this is more like it!</Entry>
-    <Entry Name="DescKeg">Perfect, a gun powder keg. There's only a small hole at the top though, not big enough to reach in...</Entry>
-    <Entry Name="DescPileArea">Dry gun powder, that's what I need!</Entry>
-    <Entry Name="EventFuseCreated">Right, with any luck, one fuse, ready to go.</Entry>
-    <Entry Name="DescHole">God, more spider webs... I hope that hole was there before the spiders, and not the other way around.</Entry>
-    <Entry Name="DescShelf">Empty shelves.</Entry>
-    <Entry Name="DescWeb">Urgh! Just looking at these webs makes my skin crawl...</Entry>
-    <Entry Name="TaskExplDoor">I think I might have found the explosives storage, in which case I need to somehow break down the locked door.</Entry>
-    <Entry Name="DescStuff01">Nope, nothing too practical here.</Entry>
-    <Entry Name="DescWheel01">It's a spare wheel.</Entry>
-    <Entry Name="DescMachine01">Looks ancient... it's so old I don't even know what it would've been used for.</Entry>
-    <Entry Name="EventStringKeg">The hole's too small to thread the string through...</Entry>
-    <Entry Name="EventStringPowder">What am I thinking, that's not what the recipe said. I need to soak the string first.</Entry>
-    <Entry Name="DescLight01">It looks like this hole's at least three feet below the surface, the light's being refracted through all that ice.</Entry>
-    <Entry Name="DescGrailing01">This place is in a serious state... did that railing come off through disrepair, or was it ripped off?</Entry>
-    <Entry Name="DescBlockade01">An electric fence and it's been put up recently? I'd better find a way to get over.</Entry>
-    <Entry Name="DescCherryBomb">These look like homemade cherry bombs... very small explosives, probably soaked through by now.</Entry>
-    <Entry Name="DescSaw">Worn and torn yet the edge is sharp to the touch.</Entry>
-    <Entry Name="DescWoodBench">All the things that you'll need to be successful as a carpenter.</Entry>
-    <Entry Name="DescBattery">This loose battery is powering the fence, can't be that long ago this was all setup.</Entry>
+    <Entry Name="EventNoticeAxe">Магчыма гэта проста кавалак лёду, які адбівае святло, ці, што больш верагодна, маё ўяўленне, але нешта, безумоўна, прыцягвае маю ўвагу пад гэтымі камянямі...</Entry>
+    <Entry Name="DescShovels01">Падобна на тое, што імі добра пакарысталіся ў свой час. Пэўна працаваць тут было не вельмі весела. На самай справе, гэта павінна было быць чартоўскі жудасна.</Entry>
+    <Entry Name="DescShovels02">Яна не дужа дапамогуць з гэтымі дзвярыма. Хутчэй за ўсё, проста распадаюцца пры кантакце.</Entry>
+    <Entry Name="DescExplDoor01">Зачынена. Чорт! Як я цяпер туды патраплю?! Дзверы сапраўды выглядаюць вельмі слабымі і старымі.</Entry>
+    <Entry Name="DescCottonstrings01">Скрынка, поўная дзіўных кавалкаў нітак.</Entry>
+    <Entry Name="DescCottonstrings02">Гэй, можа я мог бы выкарыстаць частку гэтых нітак каб зрабіць засцерагальнік! Яны выглядаюць дастаткова прыстойнымі...</Entry>
+    <Entry Name="EventPickString">Бліскуча, яшчэ на крок бліжэй да падрыву гэтай выбухоўкі без страты жыццёва важных частак цела.</Entry>
+    <Entry Name="DescExplDoorFirst">'Выбуховыя матэрыялы'. Ах, мабыць яно і ёсць! </Entry>
+    <Entry Name="DescKeg">Ідэальна, парахавая бочка. Аднак тут толькі невялікая дзірка ўверсе, недастаткова вялікая, каб залезці ўнутар...</Entry>
+    <Entry Name="DescPileArea">Сухі порах, тое, што трэба!</Entry>
+    <Entry Name="EventFuseCreated">Так, абнадзейліва, адзін засцерагальнік, гатовы да працы.</Entry>
+    <Entry Name="DescHole">Божа, яшчэ больш павуціння... Я спадзяваюся, што дзірка з'явілася тут раней за павукоў, а не наадварот.</Entry>
+    <Entry Name="DescShelf">Пустыя паліцы.</Entry>
+    <Entry Name="DescWeb">Ух! Аднаго позірку на гэтае павуцінне дастаткова, каб па скуры пабеглі мурашы...</Entry>
+    <Entry Name="TaskExplDoor">Здаецца, што я знайшоў сховішча выбуховых рэчываў, і ў такім выпадку мне трэба нейкім чынам выламаць зачыненыя дзверы.</Entry>
+    <Entry Name="DescStuff01">Не, тут нічога занадта карыснага.</Entry>
+    <Entry Name="DescWheel01">Гэта запасное кола.</Entry>
+    <Entry Name="DescMachine01">Выглядае старажытна... Такое старое, што я нават не ведаю, для чаго яго выкарыстоўвалі.</Entry>
+    <Entry Name="EventStringKeg">Дзірка занадта вузкая, каб прасунуць нітку...</Entry>
+    <Entry Name="EventStringPowder">Чым я думаю, у інструкцыі сказана не так. Спачатку трэба вымазаць нітку.</Entry>
+    <Entry Name="DescLight01">Падобна на тое, што гэтая дзіра цягнецца як мінімум тры футы скрозь паверхню, святло праламляецца праз увесь гэты лёд.</Entry>
+    <Entry Name="DescGrailing01">Гэта месца ў сур'ёзным стане... Гэтая загарадзь адвалілася праз аварыйны стан, ці была вырвана?</Entry>
+    <Entry Name="DescBlockade01">Электрычная агароджа, і яе паставілі нядаўна? Лепш знайсці спосаб праз яе прайсці.</Entry>
+    <Entry Name="DescCherryBomb">Выглядаюць як самаробныя петарды... Малая колькасць выбухоўкі, верагодна, вымакла да гэтага часу.</Entry>
+    <Entry Name="DescSaw">Зношаны і зломаны, але край востры навобмацак.</Entry>
+    <Entry Name="DescWoodBench">Усё, што трэба, каб стаць паспешным цесляром.</Entry>
+    <Entry Name="DescBattery">Гэты зменны акумулятар сілкуе агароджу, павінны быць усталяваны не так даўно.</Entry>
   </CATEGORY>
   <CATEGORY Name="MainMenu">
     <Entry Name="StartNewGame">Start a new game?</Entry>
